build(linter): prevent writing with GitHub Actions token
Signed-off-by: Gianpaolo Macario <gianpaolo.macario@arol.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -11,6 +11,9 @@ name: Lint Code Base
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
 #
 
+# Prevent writing with GH Actions token
+permissions: read-all
+
 #############################
 # Start the job on all push #
 #############################
