--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,7 +57,7 @@ jobs:
           VALIDATE_JSON: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # Do not lint downloaded code - see https://github.com/github/super-linter
+          # Do not lint downloaded code - see https://github.com/super-linter/super-linter
           FILTER_REGEX_EXCLUDE: .*/download/.*|layout.html
 
 # EOF
