build(devcontainer): add VSCode Extension: GitHub Actions
Signed-off-by: Gianpaolo Macario <gianpaolo.macario@arol.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"github.vscode-github-actions",
 				"James-Yu.latex-workshop",
 				"mhutchie.git-graph",
 				"slevesque.vscode-zipexplorer"
